# mastodon_mock

./: .bitrab-ci.yml  .dockerignore  .gitignore  .pydoctest.json  .pylintrc  .pylintrc_tests  404-subpath-redirect.html  404.html  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  canary.html  chunk-22ZKFWCH.js  chunk-23YLJWU2.js  chunk-256PXS2R.js  chunk-2BDZCMMM.js  chunk-2H5GAYZ6.js  chunk-2M5WFO33.js  chunk-2MNWC3ZI.js  chunk-2N56QLBY.js  chunk-2NB2VRKO.js  chunk-2ULZHFMM.js  chunk-2VBYURBR.js  chunk-2XIOWX5W.js  chunk-32YN3BNR.js  chunk-34KISI2Y.js  chunk-35ECCXYO.js  chunk-35RYAJVM.js  chunk-362NKKW7.js  chunk-365SC62N.js  chunk-36PLQO32.js  chunk-3B2MF26E.js  chunk-3GTGQSRR.js  chunk-3JBO6F2J.js  chunk-3MV4DXHH.js  (+362 more)
.bitrab-ci-scripts/: bandit.sh  check_docs.sh  lint.sh  mypy.sh  pytest.sh
.github/: dependabot.yml
.github/scripts/: publish-gh-pages.sh
.github/workflows/: build.yml  create_draft_release.yml  ghcr.yml  mockingbird-canary.yml  mockingbird-pages.yml  openapi-drift.yml  release.yml  zizmor.yml
canary/: 404.html  canary-commit.txt  chunk-22GNUV2H.js  chunk-22HINUP5.js  chunk-22VF5C63.js  chunk-23HGPFMJ.js  chunk-23SEZEGX.js  chunk-23XU5RZU.js  chunk-24D2VOA3.js  chunk-24ET24NJ.js  chunk-255QV52I.js  chunk-25UGJD3J.js  chunk-26GXCEI7.js  chunk-2AL7EWUQ.js  chunk-2ASFMWER.js  chunk-2AXR2J4R.js  chunk-2B2N3D7C.js  chunk-2BN75ZAZ.js  chunk-2CBDNZGG.js  chunk-2EUWWZP5.js  chunk-2IYMOJSE.js  chunk-2J3HS4SM.js  chunk-2JLJTIFD.js  chunk-2KE5CE6V.js  chunk-2LB7MXKG.js  chunk-2ML6RGRT.js  chunk-2OU4CDUV.js  chunk-2OUWLINJ.js  chunk-2P7754I5.js  chunk-2PNM3DN4.js  chunk-2PRIGIC5.js  chunk-2R56QEVP.js  chunk-2RCV4GXJ.js  chunk-2SXJ7Z3V.js  chunk-2URRKEQW.js  chunk-2WRGYDB7.js  chunk-2YMDZZOR.js  chunk-2YVMYJFG.js  chunk-2YY2Q5J7.js  chunk-32AOYSIV.js  (+1349 more)
docs/: CHANGELOG.md  index.md  installation.md  performance_design.md  troubleshooting.md
docs/extending/: CONTRIBUTING.md  openapi-sync.md
docs/overview/: README.md  how-it-works.md
docs/reference/: coverage.md
docs/usage/: admin-ui.md  data-generation.md  deploying.md  https-and-real-clients.md  quickstart.md  writing-tests.md
examples/deploy/: README.md  koyeb.md  pythonanywhere.md  railway.toml  render.yaml
mastodon_mock/: __about__.py  __init__.py  __main__.py  api_sample_data.py  app.py  cli.py  config.py  content_filters.py  content_format.py  deps.py  errors.py  faults.py  identicon.py  ids.py  middleware.py  moderation.py  openapi_compare.py  pagination.py  services.py  streaming.py  streaming_events.py  text.py  ui.py  versioning.py
mastodon_mock/alembic/: env.py
mastodon_mock/db/: __init__.py  base.py  models.py  sample_data.py  seed.py
mastodon_mock/routers/: __init__.py  accounts.py  admin.py  conversations.py  favourites_bookmarks.py  filters.py  helpers.py  instance.py  lists.py  media.py  misc.py  notifications.py  oauth.py  polls.py  preferences.py  push.py  relationships.py  search.py  statuses.py  streaming.py  tags.py  timelines.py  user_settings.py
mastodon_mock/serializers/: __init__.py  accounts.py  admin.py  announcements.py  batch.py  common.py  discovery.py  grouped_notifications.py  instance.py  media.py  misc.py  notifications.py  polls.py  relationships.py  statuses.py
mastodon_mock/testing/: __init__.py  plugin.py  seed.py  server.py  sugar.py
scripts/: basic_checks.sh  diagnose_pages_dns.ps1  gen_dev_cert.sh  github-pages-https-stuck-writeup.md
spec/: 00-overview.md  01-architecture.md  02-data-model.md  03-api-coverage.md  04-auth.md  05-versioning.md  06-testing.md  07-seeding-and-fixtures.md  08-admin-ui.md  09-sample-data-and-perf.md  README.md  error.txt  fault_injection.md  findings_from_activist.md  findings_from_mastodon_finder.md  findings_from_safari_fed.md  fix_missing_ui.md  last_last_mile.md  last_mile.md  missing_ui.md  next_phase.md  openapi_compare_report.md  openapi_support.md  publish.md  pytest_sugar.md  streaming.md
spec/UI/: reloader.md
spec/dropbox/: thinking.md
spec/fable/: roadmap.md
spec/github/: find_friends.md  integration.md
spec/search/: better_search.md
sprint/: anonymous-mastodon-sprint01.md  anonymous-mastodon-sprint02.md  anonymous-mastodon-sprint03.md  anonymous-mastodon-sprint04.md  anonymous-mastodon-sprint05.md  anonymous-mastodon-sprint06.md  anonymous-mastodon-sprint07.md  anonymous-mastodon-sprint08.md  eliza-virtual-friend.md  lists-0-overview.md  roadmap-providers.md  search-0-overview.md  search-1-rich-object-and-refine.md  search-2-serializer-and-explain.md  search-3-budget-and-pagination.md  search-4-saved-and-shareable.md  sprint03.md  sprint04.md  sprint05.md  sprint06.md  sprint07.md  sprint08.md  sprint09.md  sprint10.md  sprint11.md  sprint12.md  sprint13.md  sprint14.md  testplan-search-scheduling.md
tests/: conftest.py  test_alembic_drift.py  test_bughunt_bulk_by_id.py  test_bughunt_grouped_notifications.py  test_bughunt_mastodon_py_contract.py  test_bughunt_unit.py  test_cli.py  test_cli_main.py  test_contract_accounts_extra.py  test_contract_admin.py  test_contract_admin_extra.py  test_contract_announcements.py  test_contract_core.py  test_contract_directory.py  test_contract_discovery.py  test_contract_extended.py  test_contract_filters.py  test_contract_gaps.py  test_contract_grouped_notifications.py  test_contract_lists.py  test_contract_media.py  test_contract_oauth.py  test_contract_openapi_backlog.py  test_contract_pagination.py  test_contract_quotes.py  test_contract_scheduled.py  test_contract_status_validation.py  test_contract_tags_quotes.py  test_contract_timelines.py  test_error_envelope.py  test_file_db.py  test_hypothesis_properties.py  test_last_mile_phase_1_2.py  test_openapi_compare_unit.py  test_openapi_contract.py  test_openapi_fuzz.py  test_pytest_fixtures_contract.py  test_sample_data.py  test_testing_plugin.py  test_ui.py  (+6 more)
tests/integration/: conftest.py  (+2 more)
tickets/: 0001-keyboard-shortcuts.md  0002-mock-keyboard-shortcuts.md
ui/: .gitignore  Makefile  angular.json  eslint.config.js  package-lock.json  package.json
(+580 files in other folders)
