[project]
name = "mastodon_mock"
version = "0.1.0"
description = "Stateful Mastodon mock server that mocks the REST API with a minimal in-memory/sqlite database"
readme = "README.md"
authors = [{ name = "Matthew Martin", email = "matthewdeanmartin@gmail.com" }]
keywords = ["mastodon_mock"]
license = "MIT"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9",
]

[project.urls]
Repository = "https://github.com/matthewdeanmartin/mastodon_mock"
Documentation = "https://mastodon_mock.readthedocs.io/en/latest/"
Changelog = "https://github.com/matthewdeanmartin/mastodon_mock/blob/main/CHANGELOG.md"
homepage = "https://github.com/matthewdeanmartin/mastodon_mock"
issues = "https://github.com/matthewdeanmartin/mastodon_mock/issues/"

[project.scripts]
mastodon_mock = "mastodon_mock.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mastodon_mock"]
include = [
    "mastodon_mock/**/*.py",
    "mastodon_mock/py.typed",
    "/README.md",
    "LICENSE",
]

[tool.hatch.build.targets.sdist]
include = ["/README.md", "LICENSE", "/mastodon_mock", "/tests"]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "black>=26.0.0",
    "isort>=6.0.0",
    "jiggle-version>=2.1.0",
    "keepachangelog-manager-fork>=6.1.1,<7",
    "codespell>=2.4.1",
    "mdformat>=1.0.0",
    "metametameta>=0.1.5",
    "mypy>=1.18.0",
    "pylint[spelling]>=4.0.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-randomly>=3.15.0",
    "pytest-sugar>=0.9.7",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.4.0",
    "hypothesis>=6.100.0",
    "httpx>=0.27.0",
    "mastodon.py>=2.2.1",
    "ruff>=0.12.0",
    "troml-dev-status>=0.6.0",
    "pre-commit>=4.0.0",
    "pip-audit>=2.7.0",
    "tox>=4.0",
    "tox-uv>=1.0",
    "gha-update>=0.1.0",
    "pyyaml>=6.0",
    "yamlfix>=1.19.0",
    "interrogate>=1.5.0",
    "linkcheckmd>=1.4.0",
    "pyenchant>=3.2.2",
    "mkdocs>=1.6.0",
    "mkdocstrings[python]>=0.26.0",
    "git2md>=0.1.0",
    "pyclean>=3.0.0",
    # dead code analysis (advisory)
    "vulture>=2.11",
    "deadcode>=2.4.0",
    # API surface / doc checks
    "griffe>=1.0.0",
    "pydoclint>=0.8.0",
    "pydoctest==0.2.1",
    # advisory / exploratory tools (standalone make targets, not quality gates)
    "refurb>=2.0.0",
    "crosshair-tool>=0.0.80",
    "deptry>=0.20.0",
    "import-linter>=2.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "-q --timeout=60"
norecursedirs = ["vendor", "scripts", "dist", "build"]
markers = [
    "slow: performance benchmarks (run with -m slow)",
    "integration: integration tests (run with -m integration)",
]
junit_family = "xunit1"

[tool.black]
line-length = 120
target-version = ["py313"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 120
py_version = 313
skip_gitignore = true

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["mastodon_mock", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "B",   # bugbear
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "UP",  # pyupgrade
    "SIM", # simplify
    "RUF", # ruff-specific
    "W",   # pycodestyle warnings
]
ignore = [
    "E501",   # line too long (black handles this)
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["B011", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

# changelogmanager (keepachangelog-manager-fork) drives the release workflows.
# See .github/workflows/create_draft_release.yml and release.yml.
[tool.changelogmanager.versioning]
scheme = "semver"

[tool.changelogmanager.validation]
enforce_preamble = true
format = "auto"

[tool.changelogmanager.defaults]
error_format = "github"
commit_schema = "keepachangelog"
schema_version = "current"

[[tool.changelogmanager.components]]
name = "default"
changelog = "CHANGELOG.md"

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "except ImportError",
    "except ModuleNotFoundError",
    "if 0:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]

# import-linter: define architectural contracts here when you're ready.
# Run `make import-linter` to check them.
# See: https://import-linter.readthedocs.io/
[tool.importlinter]
root_packages = ["mastodon_mock"]
# [[tool.importlinter.contracts]]
# name = "mastodon_mock does not import from tests"
# type = "forbidden"
# source_modules = ["mastodon_mock"]
# forbidden_modules = ["tests"]

# mastodon_mock server configuration defaults.
# See spec/01-architecture.md for the full schema and .mastodon_mock.toml override rules.
[tool.mastodon_mock]
mocked_version = "4.4.4"
domain = "mock.local"
title = "Mastodon Mock"

[tool.mastodon_mock.database]
driver = "sqlite"
path = ":memory:"
echo = false

[tool.mastodon_mock.server]
host = "127.0.0.1"
port = 3000

[tool.mastodon_mock.auth]
permissive = false

[[tool.mastodon_mock.seed.accounts]]
username = "testuser"
display_name = "Test User"
access_token = "mock_token"
