[project]
name = "mastodon_mock"
version = "0.4.0"
description = "Stateful in-memory/SQLite mock of the Mastodon REST API for testing Mastodon clients"
readme = "README.md"
authors = [{ name = "Matthew Martin", email = "matthewdeanmartin@gmail.com" }]
keywords = ["mastodon", "mock", "fastapi", "testing", "fediverse", "rest-api", "mastodon.py"]
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Testing :: Mocking",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9",
    "orjson>=3.10.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
# The test-ergonomics sugar (mastodon_mock.testing): MockServer, the context
# manager / decorator, and the pytest plugin. `uvicorn` is already a core dep;
# `mastodon.py` is only needed by the client() helper, so it lives here.
test = [
    "uvicorn>=0.30.0",
    "mastodon.py>=2.2.1",
    "httpx2>=2.4.0",
]

# OpenAPI contract fuzzing (Phase 3 of spec/openapi_support.md). Heavy and opt-in:
# kept out of the `test` extra so the normal suite stays fast, and the contract
# tests are marked `contract` (deselected by default). Run with:
#   uv sync --extra contract && uv run pytest -m contract
contract = [
    "schemathesis>=4.0.0",
]

[project.entry-points.pytest11]
mastodon_mock = "mastodon_mock.testing.plugin"

[project.urls]
Repository = "https://github.com/matthewdeanmartin/mastodon_mock"
Documentation = "https://mastodon-mock.readthedocs.io/en/latest/"
Changelog = "https://github.com/matthewdeanmartin/mastodon_mock/blob/main/CHANGELOG.md"
homepage = "https://github.com/matthewdeanmartin/mastodon_mock"
issues = "https://github.com/matthewdeanmartin/mastodon_mock/issues/"

[project.scripts]
mastodon_mock = "mastodon_mock.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mastodon_mock"]
include = [
    "mastodon_mock/**/*.py",
    "mastodon_mock/py.typed",
    "/README.md",
    "LICENSE",
]
# The built Angular UI lives under a git-ignored directory; `artifacts` forces it into
# the wheel anyway (plain `include` would skip VCS-ignored files). Produced by the build
# hook below (or `make ui` locally). See spec/08-admin-ui.md.
artifacts = [
    "mastodon_mock/_ui_dist/**",
]

# Build the Angular UI before assembling the wheel, so the bundle in _ui_dist/ is
# fresh and shipped. Requires Node + npm in the build environment. See hatch_build.py.
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
include = ["/README.md", "LICENSE", "/mastodon_mock", "/tests", "/ui", "/hatch_build.py"]
exclude = ["mastodon_mock/_ui_dist", "ui/node_modules", "ui/.angular"]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "black>=26.0.0",
    "isort>=6.0.0",
    "jiggle-version>=2.1.0",
    "keepachangelog-manager-fork>=6.1.1,<7",
    "codespell>=2.4.1",
    "mdformat>=1.0.0",
    "metametameta>=0.1.5",
    "mypy>=1.18.0",
    "pylint[spelling]>=4.0.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-randomly>=3.15.0",
    "pytest-sugar>=0.9.7",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.4.0",
    "hypothesis>=6.100.0",
    "mastodon.py>=2.2.1",
    "ruff>=0.12.0",
    "troml-dev-status>=0.6.0",
    "pre-commit>=4.0.0",
    "pip-audit>=2.7.0",
    "tox>=4.0",
    "tox-uv>=1.0",
    "gha-update>=0.1.0; python_version >= '3.12'",
    "pyyaml>=6.0",
    "yamlfix>=1.19.0",
    "interrogate>=1.5.0",
    "linkcheckmd>=1.4.0",
    "pyenchant>=3.2.2",
    "mkdocs>=1.6.0",
    "mkdocstrings[python]>=0.26.0",
    "git2md>=0.1.0",
    "pyclean>=3.0.0",
    # dead code analysis (advisory)
    "vulture>=2.11",
    "deadcode>=2.4.0",
    # API surface / doc checks
    "griffe>=1.0.0",
    "pydoclint>=0.8.0",
    "pydoctest==0.2.1",
    # advisory / exploratory tools (standalone make targets, not quality gates)
    "refurb>=2.0.0",
    "crosshair-tool>=0.0.80",
    "deptry>=0.20.0",
    "import-linter>=2.0",
    "pyrefly>=1.0.0",
    "ty>=0.0.49",
    "httpx2>=2.4.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "-q --timeout=60 -m 'not integration and not slow and not contract'"
norecursedirs = ["vendor", "scripts", "dist", "build"]
markers = [
    "slow: performance benchmarks (run with -m slow)",
    "integration: integration tests (run with -m integration)",
    "mock_only: tests that exercise mastodon_mock-specific behavior and must not run against a real server",
    "real_server: dual-backend tests that also run against a live Mastodon when RUN_REAL_MASTODON_TESTS=1",
    "contract: OpenAPI contract fuzzing via schemathesis (needs the `contract` extra; run with -m contract)",
]
junit_family = "xunit1"

[tool.black]
line-length = 120
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 120
py_version = 310
skip_gitignore = true

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["mastodon_mock", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "B",   # bugbear
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "UP",  # pyupgrade
    "SIM", # simplify
    "RUF", # ruff-specific
    "W",   # pycodestyle warnings
]
ignore = [
    "E501",   # line too long (black handles this)
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["B011", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

# changelogmanager (keepachangelog-manager-fork) drives the release workflows.
# See .github/workflows/create_draft_release.yml and release.yml.
[tool.changelogmanager.versioning]
scheme = "semver"

[tool.changelogmanager.validation]
enforce_preamble = true
format = "auto"

[tool.changelogmanager.defaults]
error_format = "github"
commit_schema = "keepachangelog"
schema_version = "current"

[[tool.changelogmanager.components]]
name = "default"
changelog = "CHANGELOG.md"

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "except ImportError",
    "except ModuleNotFoundError",
    "if 0:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]

# import-linter: define architectural contracts here when you're ready.
# Run `make import-linter` to check them.
# See: https://import-linter.readthedocs.io/
[tool.importlinter]
root_packages = ["mastodon_mock"]
# [[tool.importlinter.contracts]]
# name = "mastodon_mock does not import from tests"
# type = "forbidden"
# source_modules = ["mastodon_mock"]
# forbidden_modules = ["tests"]

# mastodon_mock server configuration defaults.
# See spec/01-architecture.md for the full schema and .mastodon_mock.toml override rules.
[tool.mastodon_mock]
mocked_version = "4.4.4"
domain = "mock.local"
title = "Mastodon Mock"

[tool.mastodon_mock.database]
driver = "sqlite"
path = ":memory:"
echo = false

[tool.mastodon_mock.server]
host = "127.0.0.1"
port = 3000

[tool.mastodon_mock.auth]
permissive = false

[[tool.mastodon_mock.seed.accounts]]
username = "testuser"
display_name = "Test User"
access_token = "mock_token"

[tool.pyrefly]
project-includes = [
    "mastodon_mock",
    "tests",
]
python-version = "3.10.0"
preset = "legacy"
